<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:theme="@style/ThemeMaterial"
    android:gravity="center">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_15sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosans_bold"
                android:text="@string/app_name"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/txt_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/nunitosans_regular"
                android:textColor="@color/grey_600"
                android:textSize="@dimen/_11sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_positive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/nunitosans_bold"
                    android:text="@string/base_btn_ok"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_200"
                    android:textSize="@dimen/_10sdp"
                    android:visibility="gone"
                    tools:visibility="visible"
                    app:backgroundTint="@color/grey_800"
                    app:cornerRadius="@dimen/_15sdp"
                    app:elevation="0dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_negative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_toLeftOf="@id/btn_positive"
                    android:backgroundTint="@color/grey_200"
                    android:fontFamily="@font/nunitosans_bold"
                    android:text="@string/base_btn_cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_800"
                    android:textSize="@dimen/_10sdp"
                    android:visibility="visible"
                    tools:visibility="visible"
                    app:backgroundTint="@color/grey_200"
                    app:cornerRadius="@dimen/_15sdp"
                    app:elevation="0dp" />
            </RelativeLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>